# Sbom

./: .gitignore  ARCHITECTURE.md  README.md  data_loader.py  generate_sample_data.py  graph_analyzer.py  license_engine.py  main.py  pyproject.toml  risk_engine.py  sbom_parser.py  str.txt  test_ssl.py  verify_ai_layer.py  verify_graph.py  verify_license.py  verify_loader.py  verify_parser.py  verify_risk.py
ai/: context_builder.py  executive_summary_service.py  explanation_service.py  models.py  prioritization_service.py  remediation_service.py
ai/prompts/: explanation_prompt.txt  prioritization_prompt.txt  remediation_prompt.txt  summary_prompt.txt
backend/api/: main.py  routes.py
backend/schemas/: responses.py
backend/services/: analysis_state.py  application_service.py  dashboard_service.py  graph_service.py  report_service.py  sbom_converter.py  upload_service.py
data/sample/: applications.json  dependency_labels.csv  license_rules.json  sample_cyclonedx.json  sbom_dependencies.csv  sbom_dependency_graph.graphml  vulnerability_db.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AICard.tsx  ChartCard.tsx  DataTable.tsx  DependencyTree.tsx  Drawer.tsx  ErrorCard.tsx  KPICard.tsx  LicenseTable.tsx  RiskBadge.tsx  Tabs.tsx  UploadModal.tsx  VulnerabilityTable.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: ApplicationsPage.tsx  DashboardPage.tsx  (+2 more)
reports/: html_export.py  json_export.py  pdf_export.py  report_generator.py
reports/output/: report.html  report.json
(+7 files in other folders)
